fix bottom-left scrollbar escape

--- a/src/app/pages/animal-list/animal-list.component.scss
+++ b/src/app/pages/animal-list/animal-list.component.scss
@@ -30,6 +30,7 @@
   }
 
   .list {
+    overflow: hidden;
     height: 90%;
     padding-right: 3px;
     background-color: #ffffff;
